--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,3 +1,8 @@
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
+
 <footer class="bg-black text-white mt-16">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10 grid grid-cols-1 md:grid-cols-4 gap-8">
 
@@ -60,15 +65,20 @@
         </svg>
       </button>
       <div [ngClass]="{'hidden': !contactOpen, 'md:block': true}" class="space-y-2 text-gray-300 text-sm">
-        <p>Phone: +233 123 456 789</p>
+        <p>Phone: +233 53  983 5369</p>
         <p>Email: info@mediaarts.com</p>
-        <p>Location: Accra, Ghana</p>
+        <p>Location: AGAVENYA-KOFORIDUA, Ghana</p>
         <div class="flex space-x-4 mt-2">
-          <a href="#" class="hover:text-orange-500"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="hover:text-orange-500"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="hover:text-orange-500"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="hover:text-orange-500"><i class="fab fa-linkedin-in"></i></a>
-        </div>
+        <a href="#" class="hover:text-orange-500"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="hover:text-orange-500"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="hover:text-orange-500"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="hover:text-orange-500"><i class="fab fa-linkedin-in"></i></a>
+        <!-- WhatsApp icon -->
+        <a href="https://wa.me/233535800335?text=Hello%20MediaArts!" target="_blank" class="hover:text-green-500">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+      </div>
+
       </div>
     </div>
 
