--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -8,7 +8,7 @@
 
     <!-- Logo & Short Description -->
     <div>
-      <a href="#" class="text-2xl font-bold text-orange-500">MediaArts</a>
+      <a href="#" class="text-2xl font-bold text-orange-500">Right Media Productions</a>
       <p class="mt-2 text-gray-300 text-sm">
         Bringing creativity to life through motion graphics, branding, printing, and livestream services.
       </p>
@@ -67,7 +67,7 @@
       <div [ngClass]="{'hidden': !contactOpen, 'md:block': true}" class="space-y-2 text-gray-300 text-sm">
         <p>Phone: +233 53  983 5369</p>
         <p>Email: info@mediaarts.com</p>
-        <p>Location: AGAVENYA-KOFORIDUA, Ghana</p>
+        <p>Location: KOFORIDUA AGAVENYA, EASTERN REGION</p>
         <div class="flex space-x-4 mt-2">
         <a href="#" class="hover:text-orange-500"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="hover:text-orange-500"><i class="fab fa-twitter"></i></a>
