--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -4,7 +4,7 @@
 
       <!-- Logo -->
       <div class="flex-shrink-0 flex items-center">
-        <a href="#" class="text-2xl font-bold text-orange-500">MediaArts</a>
+        <a href="#" class="text-2xl font-bold text-orange-500">Right Media Productions</a>
       </div>
 
       <!-- Desktop Menu -->
