--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -66,7 +66,7 @@
       </button>
       <div [ngClass]="{'hidden': !contactOpen, 'md:block': true}" class="space-y-2 text-gray-300 text-sm">
         <p>Phone: +233 53  983 5369</p>
-        <p>Email: info@mediaarts.com</p>
+        <p>Email:  seniorgyekye123@gmail.com</p>
         <p>Location: KOFORIDUA AGAVENYA, EASTERN REGION</p>
         <div class="flex space-x-4 mt-2">
         <a href="#" class="hover:text-orange-500"><i class="fab fa-facebook-f"></i></a>
