--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -42,9 +42,9 @@
           </div>
         </div>
 
-        <a routerLink="/portfolio" class="hover:text-orange-500 font-medium">Portfolio</a>
-        <a routerLink="/blog" class="hover:text-orange-500 font-medium">Blog / News</a>
-        <a routerLink="/contact" class="hover:text-orange-500 font-medium">Contact / Book Us</a>
+        <a routerLink="/Portfolio" class="hover:text-orange-500 font-medium">Portfolio</a>
+        <a routerLink="/Blog" class="hover:text-orange-500 font-medium">Blog / News</a>
+        <a routerLink="/Contact" class="hover:text-orange-500 font-medium">Contact / Book Us</a>
       </div>
 
       <!-- Mobile Menu Button -->
