--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -4,7 +4,7 @@
 
       <!-- Logo -->
       <div class="flex-shrink-0 flex items-center">
-        <a href="#" class="text-2xl font-bold text-orange-500">Right Media Productions</a>
+        <a href="#" class="text-2xl font-bold text-orange-500">Right Media Production</a>
       </div>
 
       <!-- Desktop Menu -->
@@ -27,7 +27,7 @@
           <div *ngIf="servicesOpen"
                class="absolute left-0 top-full mt-1 w-56 bg-black rounded shadow-lg py-2 z-50">
             <a routerLink="/branding" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">Livestream</a>
-            <a routerLink="/MotionGraphics" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">Motion Graphics</a>
+            <a routerLink="/Graphics" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">Graphic Design</a>
             <a routerLink="/Printing" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">Printing</a>
             <a routerLink="/T-ShirtPrinting" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">T-Shirt Printing</a>
             <a routerLink="/VideoProductionAndPhotoEditing" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">Video Production & Photo Editing</a>
@@ -97,7 +97,7 @@
 
         <div *ngIf="servicesOpen" class="flex flex-col bg-black">
           <a routerLink="/branding" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">Livestream</a>
-          <a routerLink="/MotionGraphics" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">Motion Graphics</a>
+          <a routerLink="/Graphics" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">Graphics Design</a>
           <a routerLink="/Printing" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">Printing</a>
           <a routerLink="/T-ShirtPrinting" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">T-Shirt Printing</a>
           <a routerLink="/VideoProductionAndPhotoEditing" class="block px-4 py-2 hover:bg-orange-500 hover:text-black">Video Production & Photo Editing</a>
