--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -8,7 +8,7 @@
 
     <!-- Logo & Short Description -->
     <div>
-      <a href="#" class="text-2xl font-bold text-orange-500">Right Media Productions</a>
+      <a href="#" class="text-2xl font-bold text-orange-500">Right Media Production</a>
       <p class="mt-2 text-gray-300 text-sm">
         Bringing creativity to life through motion graphics, branding, printing, and livestream services.
       </p>
@@ -65,7 +65,7 @@
         <p>Email: seniorgyekye123@gmail.com</p>
         <p>Location: KOFORIDUA AGAVENYA, EASTERN REGION</p>
         <div class="flex space-x-4 mt-2">
-          <a href="https://www.instagram.com/official_right-media" target="_blank" class="hover:text-orange-500">
+          <a href="https://www.instagram.com/official_right_media?igsh=MWdyZW9lMHFodDlwZw==" target="_blank" class="hover:text-orange-500">
             <i class="fab fa-instagram"></i>
           </a>
           <a href="https://www.tiktok.com/@rightmediaproductions21" target="_blank" class="hover:text-orange-500">
